feat: release 2.5.0 (#258)